Revert "Merge pull request #5 from team-roadmate/route"
This reverts commit 317f45e6b85d3eb82ff3afb10f7f1336a7c38bd3, reversing
changes made to c29f6431de320e52abe75622d03ed92b57a46e40.